<resources>
    <string name="app_name">Rendimax</string>
    <string name="error_conexion_google">No ha sido posible establecer la conexión con los servicios
        de Google.</string>
    <string name="error_conexion_internet">No hay conexión a la red</string>
    <string name="no_logeo">No fue posible iniciar la sesión</string>
    <string name="acerca_rendimax">Acerca de Rendimax</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_tips">Tips</string>
    <string name="menu_estadisticas">Estadísticas</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_proyecciones">Mis proyecciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_vista">Hubo un error al cargar la vista</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="revocar_usuario">Revocar Cuenta</string>
    <string name="error_cerrar_sesion">Error al cerrar la sesión</string>
    <string name="error_revocar_sesion">No ha sido posible revocar el acceso</string>
    <string name="no_mail_disponible">Email no disponible</string>
    <string name="nombre_usuario_no_disponible">Usuario no disponible</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="no_autentico_firebase">No fue posible autenticar con Firebase</string>
    <string name="sesion_no_iniciada">No tienes sesión abierta</string>
    <string name="descripcion_inicio">
                Las opciones disponibles dentro de la aplicación son las siguientes:</string>
    <string name="bienvenida">Bienvenido(a)</string>
    <string name="sin_texto">-</string>
    <string name="sitios_interes">Sitios que quizá te pueda interesar:</string>
    <string name="ulr_no_disponible">URL no disponible</string>
    <string name="recomendaciones_no_disponibles">No ha sido posible cargar los sitios recomendados</string>
    <string name="grafica_no_disponible">Gráfica no disponible</string>
    <string name="descripcion_grafica">Comparación de rendimiento e interés de cada banco</string>
    <string name="banco_mayor_rendimiento">Tasa de mayor rendimiento:</string>
    <string name="banco_mayor_interes">Tasa de mayor interés:</string>
    <string name="error_estadisticas">No ha sido posible cargar la información de estadísiticas</string>
    <string name="error_llenar_grafica">No ha sido posible obtener los datos de la gráfica</string>
    <string name="mas_info_bancos">Para más información puedes consultar:</string>
    <string name="nombre_banco_mayor_interes">Banco:</string>
    <string name="nombre_banco">Banco:</string>
    <string name="descripcion_no_disponible">La descripción de este menú no está disponible</string>
    <string name="aviso_redes">Síguenos en nuestras redes sociales</string>
    <string name="agregar_proyecciones">Agregar nueva proyección</string>
    <string name="no_cargo_opciones">Cargando las opciones...</string>
    <string name="no_cargo_paginas">Cargando las páginas recomendadas...</string>
    <string name="sin_dato">-</string>
    <string name="no_cargo_paginas_bancos">Cargando enlaces de bancos...</string>
    <string name="text_no_cargo_banco_interes">Cargando información...</string>
    <string name="text_no_cargo_banco_rendimiento">Cargando información...</string>
    <string name="hint_nombre_proyeccion">Ej. Mi proyección</string>
    <string name="hint_cantidad_proyeccion">Ej. 100</string>
    <string name="tv_nombre_proyeccion">Nombre de la proyección:</string>
    <string name="tv_cantidad_proyeccion">Cantidad de inversión inicial($):</string>
    <string name="datos_proyeccion">Datos de la proyección:</string>
    <string name="tv_años_proyeccion">Año (s):</string>
    <string name="hint_anios_proyeccion">Ej. 1...5</string>
    <string name="tv_banco_proyeccion">Institución Bancaria</string>
    <string name="hint_banco_proyeccion">Ej. CitiBanamex</string>
    <string name="validando">Validando...</string>
    <string name="tv_cantidad_anual_proyeccion">Cantidad de inversión anual($):</string>
    <string name="error_nombre">Es necesario el nombre de la proyección</string>
    <string name="error_cantidad_inicial">Es necesario ingresae la cantidad inicial de inversión</string>
    <string name="error_cantidad_inicial_anual">Es necesario ingresar la cantidad anual de la inversión</string>
    <string name="error_anios">Es necesario ingresar la cantidad de años</string>
    <string name="error_banco">Es necesario ingresar el banco de la proyección</string>
    <string name="error_nombre_repetido">Ya está registrada una proyección con el mismo nombre</string>
    <string name="grafica_rendimiento">Gráfica de rendimiento:</string>
    <string name="grafica_inversion">Gráfica de inversión:</string>
    <string name="generales_detalle_proyeccion">Datos de la proyección:</string>
    <string name="inversion_inicial">Inversión inicial:</string>
    <string name="inversion_anual">Inversión anual:</string>
    <string name="inversion_anios">Años:</string>
    <string name="inversion_tasa_banco">Tasa de rendimiento:</string>
    <string name="total_de_rendimiento">Total inversión + rendimiento:</string>
    <string name="total_de_inversion">Total de la inversión:</string>
</resources>
