<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemInicio"
        android:title="@string/menu_inicio"
        android:icon="@drawable/ic_home"
        />

    <item
        android:id="@+id/itemTips"
        android:title="@string/menu_tips"
        android:icon="@drawable/ic_tips"
        />

    <item
        android:id="@+id/itemEstadisticas"
        android:title="@string/menu_estadisticas"
        android:icon="@drawable/ic_estadisticas"
        />

    <item
        android:id="@+id/itemProyecciones"
        android:title="@string/menu_proyecciones"
        android:icon="@drawable/ic_proyecciones"
        />

    <item
        android:id="@+id/itemPerfil"
        android:title="@string/menu_perfil"
        android:icon="@drawable/ic_perfil"
        />
</menu>