<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    tools:context="sergio.upiicsa.rendimax.ProyeccionFormActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detalle_proyeccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titulo_toolbar_detalleProyeccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Detalles de la proyección"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="58dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:id="@+id/layout_detalle_proyeccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="26dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/generales_detalle_proyeccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/text_default_material_light_primary"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/nombre_banco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/text_default_material_light_primary"
                        />

                    <TextView
                        android:text="@string/sin_dato"
                        android:id="@+id/text_banco_detalle_proyeccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/text_default_material_light_secondary"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/inversion_inicial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/text_default_material_light_primary"
                        />

                    <TextView
                        android:text="@string/sin_dato"
                        android:id="@+id/text_inv_inicial_detalle_proyeccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/text_default_material_light_secondary"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/inversion_anual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/text_default_material_light_primary"
                        />

                    <TextView
                        android:text="@string/sin_dato"
                        android:id="@+id/text_inv_anual_detalle_proyeccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/text_default_material_light_secondary"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/inversion_anios"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/text_default_material_light_primary"
                        />

                    <TextView
                        android:text="@string/sin_dato"
                        android:id="@+id/text_inv_anios_detalle_proyeccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/text_default_material_light_secondary"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/inversion_tasa_banco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/text_default_material_light_primary"
                        />

                    <TextView
                        android:text="@string/sin_dato"
                        android:id="@+id/text_tasa_banco_detalle_proyeccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textSize="16sp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/text_default_material_light_secondary"
                        />

                </LinearLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/grafica_rendimiento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/text_default_material_light_primary"
                        />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/proyeccion_grafica_rendimiento"
                        android:layout_width="match_parent"
                        android:layout_height="800px"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/total_de_rendimiento"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:textSize="16sp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/text_default_material_light_primary"
                            />

                        <TextView
                            android:text="@string/sin_dato"
                            android:id="@+id/text_total_rendimiento_detalle_proyeccion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:textSize="16sp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/text_default_material_light_secondary"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/total_de_inversion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:textSize="16sp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/text_default_material_light_primary"
                            />

                        <TextView
                            android:text="@string/sin_dato"
                            android:id="@+id/text_total_inversion_detalle_proyeccion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:textSize="16sp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/text_default_material_light_secondary"
                            />

                    </LinearLayout>
                </LinearLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/grafica_inversion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/text_default_material_light_primary"
                        />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/proyeccion_grafica_inversion"
                        android:layout_width="match_parent"
                        android:layout_height="800px"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/total_de_inversion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:textSize="16sp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/text_default_material_light_primary"
                            />

                        <TextView
                            android:text="@string/sin_dato"
                            android:id="@+id/text_total_grafica_rendimiento_detalle_proyeccion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:textSize="16sp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/text_default_material_light_secondary"
                            />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/progressBarDetalleProyeccion"
            android:visibility="gone"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
